--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ewidencja-brakow-noscan",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+  "node": "18"
+  }
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
